# EmbedCNucleoG491RE

./: .gitignore  .gitmodules  CMakeLists.txt  arm-none-eabi.cmake  build.sh  main.c
app/: CMakeLists.txt  app.c  app.h  led.c  led.h
board/g491re/: CMakeLists.txt  board.c  board_layout.h  gpio.c  gpio.h  stm32g4xx_hal_conf.h
bsp/: CMakeLists.txt  bsp_gpio.c  bsp_gpio.h
src/: main.c
src/app/: CMakeLists.txt  app.c
src/board/g491re/: CMakeLists.txt  board.c  gpio.c  rcc.c
src/board/g491re/public_inc/: board.h  gpio.h  rcc.h
src/bsp/: CMakeLists.txt  bsp_gpio.c
src/bsp/public_inc/: bsp_gpio.h
